--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,8 @@ android {
 }
 
 repositories {
-    mavenCentral() // jcenter() works as well because it pulls from Maven Central
+    mavenCentral()
+    jcenter()
 }
 
 dependencies {
@@ -34,6 +35,9 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     testCompile 'junit:junit:4.12'
+    androidTestCompile "org.mockito:mockito-core:1.10.19"
+    androidTestCompile 'com.google.dexmaker:dexmaker:1.2'
+    androidTestCompile 'com.google.dexmaker:dexmaker-mockito:1.2'
 
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.android.support:design:25.1.0'
