--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,4 +65,7 @@ dependencies {
     compile 'com.trello:rxlifecycle-navi:0.6.1'
 
     compile 'com.github.bumptech.glide:glide:3.7.0'
+
+    compile 'org.parceler:parceler-api:1.1.6'
+    apt 'org.parceler:parceler:1.1.6'
 }
